--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,17 @@
 
     {% include header.html %}
 
-    <div class="page-content">
+<!--     <div class="page-content">
       <div class="wrapper">
         {{ content }}
       </div>
+    </div> -->
+
+    <div class="page-content col-sm-8">
+      {{ content }}
     </div>
 
+    {% include sidebar.html %}
 
     {% include footer.html %}
 
