--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,17 +7,16 @@
 
     {% include header.html %}
 
-<!--     <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div> -->
 
-    <div class="page-content col-sm-8">
-      {{ content }}
+    <div class="content">
+        <div class="page-content col-sm-8">
+          {{ content }}
+        </div>
+
+        <div class="side-content col-sm-2">
+        {% include sidebar.html %}
+        </div>
     </div>
-
-    {% include sidebar.html %}
 
     {% include footer.html %}
 
