--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,4 @@
+
 /**
  * Site header
  */
@@ -7,6 +8,8 @@
 
     width:100%; 
     height:56px;
+
+    z-index:9
 }
 
 .site-title {
@@ -92,7 +95,23 @@
     }
 }
 
+/**
+ * Sidebar
+ */
+.sidebar-module {
+  padding: 15px;
+  margin: 0 -15px 15px;
+  font-size: 14px;
+  h4{
+    font-size: $base-font-size;
+    font-weight: bold;
+    color: $grey-color-dark;
+  }
+  li{
+    list-style: none; 
+  }
 
+}
 
 /**
  * Site footer
@@ -162,14 +181,58 @@
     }
 }
 
+/*two columns*/
+.content {
+    // 从 wrapper 类中抄来的 
+    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+    margin-right: auto;
+    margin-left: auto;
 
+    padding-top: 60px; // 自己加的
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
+    @extend %clearfix;
+
+    @include media-query($on-laptop) {
+        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+        padding-right: $spacing-unit / 2;
+        padding-left: $spacing-unit / 2;
+    }
+
+    .col-sm-8,.col-sm-2{
+      position:relative;
+      min-height:1px;
+      margin: 0px 15px;
+    }
+
+
+    @media screen and (min-width : $on-palm) {
+      .col-sm-8 {
+        float:left;
+        width:65%;
+      }
+
+      .col-sm-2 {
+        float:right;
+        width:25%;
+      }
+    }
+}
+
+/**
+ * Side content
+ */
+.side-content {
+    padding: $spacing-unit * 2 0;
+}
 
 /**
  * Page content
  */
 .page-content {
-    // padding: $spacing-unit 0;
-    padding: 80px 0;
+    padding: $spacing-unit 0;
 }
 
 .page-heading {
