--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -249,12 +249,12 @@ time{
     @media screen and (min-width : $on-palm) {
       .col-sm-8 {
         float:left;
-        width:65%;
+        width:70%;
       }
 
       .col-sm-2 {
         float:right;
-        width:25%;
+        width:20%;
       }
     }
 }
@@ -263,7 +263,7 @@ time{
  * Side content
  */
 .side-content {
-    padding: $spacing-unit * 2 0;
+    padding: $spacing-unit 0;
 }
 
 /**
