--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -45,7 +45,7 @@
     .post-excerpt {
         &, * {
             font-size: $small-font-size;
-            line-height: $small-font-size;
+            line-height: 1.5;
             padding-top: 0;
             padding-bottom: 0;
 	        color: #333;
