--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,7 +4,7 @@
  */
 .site-header {
     position: fixed;
-    background: black;
+    background: #483D8B;
 
     width:100%; 
     height:56px;
@@ -13,8 +13,9 @@
 }
 
 .site-title {
-    font-size: 26px;
-    font-weight: 300;
+    font-size: 30px;
+    font-family: Helvetica;
+    font-weight: 400;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
@@ -128,19 +129,9 @@
 }
 
 
-/*time style of tages and categories*/
-
-time{
-  margin-left: 15px;
-  font-style: italic;
-}
-
-
-
 /**
  * Aboutme photo Style
  */
-
 .about{
   img {
     height: 128px;
@@ -306,7 +297,7 @@ time{
 }
 
 .post-title {
-    font-size: 42px;
+    font-size: 36px;
     letter-spacing: -1px;
     line-height: 1;
 
@@ -318,8 +309,16 @@ time{
 .post-content {
     margin-bottom: $spacing-unit;
 
+    h1 {
+        font-size: 30px;
+
+        @include media-query($on-laptop) {
+            font-size: 28px;
+        }
+    }
+
     h2 {
-        font-size: 28px;
+        font-size: 26px;
 
         @include media-query($on-laptop) {
             font-size: 24px;
@@ -327,10 +326,10 @@ time{
     }
 
     h3 {
-        font-size: 22px;
+        font-size: 20px;
 
         @include media-query($on-laptop) {
-            font-size: 18px;
+            font-size: 16px;
         }
     }
 
@@ -338,7 +337,7 @@ time{
         font-size: 16px;
 
         @include media-query($on-laptop) {
-            font-size: 12px;
+            font-size: 16px;
         }
     }
 }
