--- a/css/main.scss
+++ b/css/main.scss
@@ -6,9 +6,8 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: Arial, "Microsoft YaHei", "Helvetica Neue", Helvetica, sans-serif;
 $base-font-size:   16px;
-// $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
@@ -16,7 +15,7 @@ $base-line-height: 1.5;
 $spacing-unit:     20px;
 
 $text-color:       #111;
-$nav-text-color:   grey;
+$nav-text-color:   #111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
