--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,8 @@ $spacing-unit:     20px;
 
 $text-color:       #111;
 $nav-text-color:   grey;
-$background-color: #fdfdfd;
+// $background-color: #fdfdfd;
+$background-color: #D6EDFF;
 $brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
