--- a/css/main.scss
+++ b/css/main.scss
@@ -16,8 +16,7 @@ $spacing-unit:     20px;
 
 $text-color:       #111;
 $nav-text-color:   #111;
-// $background-color: #fdfdfd;
-$background-color: #D6EDFF;
+$background-color: #fdfdfd;
 
 $brand-color:      #2a7ae2;
 $grey-color:       #828282;
