--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -44,7 +44,8 @@
     }
     .post-excerpt {
         &, * {
-            font-size: $small-font-size;
+            // font-size: $small-font-size * 1.1;
+            font-size: 14px;
             line-height: 1.5;
             padding-top: 0;
             padding-bottom: 0;
