add vistor count’

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <html>
 
   {% include head.html %}
@@ -21,6 +22,8 @@
     {% include footer.html %}
 
   </body>
+
+{% include lean-analytics.html %}
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
